other/prepend-image-registry/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: prepend-registry
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
