other/prepend-image-registry/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: prepend-image-registry
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../prepend-image-registry.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: ../.kyverno-test/resource.yaml
    - apply:
        file: ../.kyverno-test/withoutinitcontainer.yaml
    - apply:
        file: ../.kyverno-test/resourceFailed.yaml
    - apply:
        file: pods.yaml
    - assert:
        file: ../.kyverno-test/patchedResource.yaml
    - assert:
        file: pods-patched.yaml
    - assert:
        file: ../.kyverno-test/patchedResourceWithoutInitContainer.yaml
    - assert:
        file: ../.kyverno-test/failpatchedResource.yaml
